layout changes for newsletter

--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -7,23 +7,21 @@ import news from '../data/news.json';
     <div class="main">
         <Container className="container-content" >         
             <div class="content-container-fullwidth container" >
-                <div class="content">
-                    <section class="news" transition:name="slide"> 
-                        <h2>News</h2>
-                        <div class="global-link">
-                            <ul class="news-list">
+                <div class="content">				
+                    <section class=" newsletter" transition:name="media-player"> 
+                        <h2>Newsletter</h2>
+                        <ul class="news-list link-card-grid">
                                 {news.map(news => (
-                                    <li class={`${news.news_cat_slug} `} >
+                                    <li class={`${news.news_cat_slug} list newsletter-list`} >
                                         <span class={`cat ${news.news_cat_slug}`} set:html={news.news_cat}></span>                                     
-                                        <a href={`${news.source}`}  target="_blank" ><h5 set:html={news.title}></h5> </a>
+                                        <a href={`${news.source}`}  target="_blank" ><h5 set:html={news.title} class="title"></h5> </a>
                                         <span class="date" set:html={news.date_posted}></span>
-                                        <p set:html={news.description}></p>
+                                        <p set:html={news.description} class="description"></p>
                                     </li>
                                 ))}
-                            </ul>  
-                        </div>
+                        </ul>
                     </section>
-                </div>
+                </div>    
             </div>   
         </Container>
     </div>    
