--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -111,7 +111,7 @@ const { title, description, image = '/favicon.ico' } = Astro.props;
 		}, );
 </script>
 
-<script is:inline src="https://www.googletagmanager.com/gtag/js?id=G-8GWLGV29V7"></script>
+<!-- <script is:inline src="https://www.googletagmanager.com/gtag/js?id=G-8GWLGV29V7"></script>
 <script is:inline >
 	document.addEventListener('astro:page-load', () => {
 		window.dataLayer = window.dataLayer || [];
@@ -121,4 +121,4 @@ const { title, description, image = '/favicon.ico' } = Astro.props;
 		gtag("js", new Date());
 		gtag("config", "G-8GWLGV29V7");
 	}, );
-</script>
+</script> -->
