--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -13,7 +13,7 @@ import slider from '../data/slider.json';
 </div>
 
 
-<link is:inline rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <style>
     .mySwiper {
         max-height: 500px;
@@ -22,5 +22,5 @@ import slider from '../data/slider.json';
 
   <script is:inline src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script  is:inline>
-    var swiper = new Swiper(".mySwiper", {});
+    var swiper = new swiper(".mySwiper", {});
   </script>
