--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,9 +1,9 @@
 ---
 import { Icon } from 'astro-icon'
 import Container from '../components/Container.astro';
-import menuData from '../data/menu.json';
+// import menuData from '../data/menu.json';
 import globallink from '../data/globallink.json';
-const { slug } = Astro.params;
+// const { slug } = Astro.params;
 
 ---
 <header id="navHeader" class="header--right white-bg" transition:animate="fade">
