added viewtransition for slider

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -2,7 +2,7 @@
 import slider from '../data/slider.json';
 ---
 
-<div class="swiper mySwiper">
+<div class="swiper mySwiper" transition:animate="slide">
     <div class="swiper-wrapper">
         {slider.map(slider => (
             <div class="swiper-slide">
