fix swiper constructor

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -22,5 +22,5 @@ import slider from '../data/slider.json';
 
   <script is:inline src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script  is:inline>
-    var swiper = new swiper(".mySwiper", {});
+    var swiper = new Swiper(".mySwiper", {});
   </script>
