--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -8,8 +8,11 @@ import slider from '../data/slider.json';
             <div class="swiper-slide">
                 <img src={slider.image}>
             </div>
-        ))}
+        ))}        
     </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
 </div>
 
 
@@ -22,5 +25,17 @@ import slider from '../data/slider.json';
 
   <script is:inline src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script  is:inline>
-    var swiper = new Swiper(".mySwiper", {});
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1,
+      spaceBetween: 30,
+      loop: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
   </script>
