header minor styling fix

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -63,7 +63,7 @@ import globallink from '../data/globallink.json';
                       <a href={`${submenuItem.url}`} set:html={submenuItem.name}  target="_blank"></a>                      
                       </li>                    
                   ))}
-                  <li class="back"><a href="#">Back</a></li>
+                  <li class="back"><a href="#"><i class="fas fa-angle-double-left"></i> Back</a></li>
                   </ul>
               )}
               </li>
