--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -154,6 +154,7 @@ body {
               width: 100%;
               padding: 15px 10px;
               border-bottom: 1px solid #ccc;
+              text-align: left;
               &:hover {
                 background: #ccc;
               }
@@ -182,7 +183,7 @@ body {
             }
             
             &.back {
-              display: block;
+              display: block !important;
             }
           }
         }
